k8s_advance/network_policy/backend.yaml
######### kubectl create -f pod-defination.yaml ############################
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  labels:
    type: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx
