k8s_advance/network_policy/webapp-deny-all.yaml
# Deny all outgoing traffic from pod webapp
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
       app: webapp
  policyTypes:
  - Egress
